# laptop_as_remote

./: .gitmodules  CMakeLists.txt  LICENSE  lock.c  main.c  main.cpp  xmodmap.sh
src/: main.cpp  util.h
src/input/: devices_descriptors.cpp  devices_descriptors.h  emulator.cpp  emulator.h  filter_hwid.cpp  filter_hwid.h  input_driver.cpp  input_driver.h  linux_structs.h  serialization.h
src/logic/: client.cpp  client.h  confs.cpp  confs.h  event_logic.cpp  event_logic.h  message.hpp
src/network/: client.cpp  client.h  discovery.cpp  discovery.h  network.h  protocol.cpp  protocol.h  server.cpp  server.h
src/tests/: callbacks.cpp  callbacks.h
src/util/: array_view.h  callback.hpp  data_junction.hpp  devicewatcher.cpp  devicewatcher.h  logic_junction.hpp  queue.hpp
